<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_apply_adjust"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.project.yura.photoeditor.ui.activity.ApplyAdjustActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageToEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/preview_button"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="6dp"
            android:background="@android:color/transparent"
            android:padding="@dimen/icon_button_margin"
            android:src="@drawable/preview_button_dark" />

        <ImageView
            android:id="@+id/color_picker_button"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="6dp"
            android:background="@android:color/transparent"
            android:padding="@dimen/icon_button_margin"
            android:src="@drawable/color_picker_icon"
            android:visibility="gone" />

        <com.theartofdev.edmodo.cropper.CropImageView
            android:id="@+id/crop_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:cropGuidelines="on"
            app:cropScaleType="fitCenter"
            app:cropAutoZoomEnabled="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <ImageView
            android:id="@+id/resize_button"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:padding="@dimen/icon_button_margin"
            android:src="@drawable/resize_small" />

        <ImageView
            android:id="@+id/rotate_right_button"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="6dp"
            android:background="@android:color/transparent"
            android:padding="@dimen/icon_button_margin"
            android:src="@drawable/rotate_right_button"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/rotate_left_button"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="6dp"
            android:layout_toStartOf="@id/rotate_right_button"
            android:background="@android:color/transparent"
            android:padding="@dimen/icon_button_margin"
            android:src="@drawable/rotate_left_button"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_to_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="2dp"
            android:max="100"
            android:progress="50"
            android:visibility="gone"
            tools:visibility="visible" />

        <SeekBar
            android:id="@+id/seek_bar_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="2dp"
            android:max="100"
            android:progress="50"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/bright_adjust_select"
                style="@style/AppTheme.AdjustElement">

                <ImageView
                    android:id="@+id/adjust_icon"
                    style="@style/AppTheme.ElementIcon"
                    android:src="@drawable/adjust_bright_icon" />

                <TextView
                    android:id="@+id/adjust_text"
                    style="@style/AppTheme.AdjustElementDescription"
                    android:text="@string/bright" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contrast_adjust_select"
                style="@style/AppTheme.AdjustElement">

                <ImageView
                    android:id="@id/adjust_icon"
                    style="@style/AppTheme.ElementIcon"
                    android:src="@drawable/adjust_contrast_icon" />

                <TextView
                    android:id="@id/adjust_text"
                    style="@style/AppTheme.AdjustElementDescription"
                    android:text="@string/contrast" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/balance_adjust_select"
                style="@style/AppTheme.AdjustElement">

                <ImageView
                    android:id="@id/adjust_icon"
                    style="@style/AppTheme.ElementIcon"
                    android:src="@drawable/adjust_balance_icon" />

                <TextView
                    android:id="@id/adjust_text"
                    style="@style/AppTheme.AdjustElementDescription"
                    android:text="@string/balance" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/saturation_adjust_select"
                style="@style/AppTheme.AdjustElement">

                <ImageView
                    android:id="@id/adjust_icon"
                    style="@style/AppTheme.ElementIcon"
                    android:src="@drawable/adjust_black_white_icon" />

                <TextView
                    android:id="@id/adjust_text"
                    style="@style/AppTheme.AdjustElementDescription"
                    android:text="@string/saturation" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/crop_adjust_select"
                style="@style/AppTheme.AdjustElement">

                <ImageView
                    android:id="@id/adjust_icon"
                    style="@style/AppTheme.ElementIcon"
                    android:src="@drawable/adjust_crop_icon" />

                <TextView
                    android:id="@id/adjust_text"
                    style="@style/AppTheme.AdjustElementDescription"
                    android:text="@string/crop" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_bar_border"
            android:background="@color/colorText"
            android:orientation="horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_bar_height"
            android:background="@color/colorAccent">

            <TextView
                style="@style/AppTheme.HeadLine"
                android:text="@string/adjust_option" />

            <ImageView
                android:id="@+id/cancel_button"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:paddingEnd="18dp"
                android:paddingStart="18dp"
                android:src="@drawable/cancel_icon" />

            <ImageView
                android:id="@+id/ok_button"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="14dp"
                android:paddingStart="14dp"
                android:src="@drawable/ok_icon" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
