<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/color_picker_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:padding="16dp">

    <com.flask.colorpicker.ColorPickerView
        android:id="@+id/color_picker_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:alphaSlider="true"
        app:density="12"
        app:lightnessSlider="true"
        app:lightnessSliderView="@+id/v_lightness_slider"
        app:wheelType="FLOWER" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/radius_color_preview_size"
                android:layout_height="@dimen/radius_color_preview_size"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/color_picker_left_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/colorPrimary" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/color_picker_center_preview"
                android:layout_width="@dimen/radius_color_preview_size"
                android:layout_height="@dimen/radius_color_preview_size"
                android:layout_gravity="center"
                android:src="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/color_picker_right_preview"
                android:layout_width="@dimen/radius_color_preview_size"
                android:layout_height="@dimen/radius_color_preview_size"
                android:src="@color/colorPrimary" />

        </LinearLayout>

    </RelativeLayout>

    <com.project.yura.photoeditor.ui.view.RadiusSlider
        android:id="@+id/v_radius_slider"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp" />

</LinearLayout>