...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_bar_height"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/adjust_select"
                style="@style/AppTheme.ElementLayout">

                <ImageView
                    style="@style/AppTheme.ElementIcon"
                    android:src="@drawable/frame_icon" />

...
                    style="@style/AppTheme.ElementDescription"
                    android:text="@string/frame_option" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter_select"
                style="@style/AppTheme.ElementLayout">

                <ImageView
                    style="@style/AppTheme.ElementIcon"
                    android:src="@drawable/filter_icon" />

...
